# twd_bsi_2018

./: .gitignore  README.md  pyproject.toml  requirements.txt
tango_with_django_project/: populate_rango2.py
tango_with_django_project/rango/: admin.py  forms.py  urls.py  views.py
tango_with_django_project/rango/models/: Category.py  Page.py  UserProfile.py  __init__.py
tango_with_django_project/rango/templatetags/: rango_template_tags.py
tango_with_django_project/rango/views/: __init__.py  add_category.py  add_page.py  like_category.py  register.py  restricted.py  show_category.py  suggest_category.py  track_url.py
tango_with_django_project/tango_with_django_project/: settings.py  urls.py
tango_with_django_project/templates/rango/: about.html  add_category.html  add_page.html  base.html  category.html  cats.html  index.html  login.html  register.html
