[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Marco André Mendes", email = "marcoandre@gmail.com"},
]
dependencies = [
    "coverage==4.5.1",
    "Django>1.9.13",
    "django-bootstrap-toolkit==2.15.0",
    "Pillow==5.2.0",
]
requires-python = ">=3.6"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
